# 2026-1-CECD1-Dfine-02

./: .gitignore  DESIGN_RATIONALE.md  README.md  README_coherence_filter.md  ablation_embedding.py  build_consumption_meta.py  build_faiss.py  consumption_extraction.ipynb  eval_result.json  evaluate.py  generate_responses.py  make_diagram.py  pipeline.py  prompt-template.md  prompt_builder.py  requirements.txt  select_mentors.py  vector_store.py  정합메트릭스.ipynb
data/: consumption_matrix.json  consumption_tags.csv  onboarding_regulars.json  scenarios.json
embedding/: README.md  config.toml  main.py  pyproject.toml
embedding/docs/: anchors.md  design.md  experiment_log.md  labels.md  outputs.md  overview.md  parameter_rationale.html  pipeline.md  scripts.md
embedding/src/: anchor_match.py  anchor_match.toml  anchors_archetype.py  anchors_consumption.py  archetype_cluster.py  archetype_cluster.toml  archetype_inspect.py  archetype_match.py  archetype_match.toml  consumption_cluster.py  consumption_cluster.toml  consumption_inspect.py  embed_consumption.py  embed_consumption2.py  embed_percol5.py  matrix.py  sweep_consumption_pca.py
embedding/src/legacy/: consumption_tag.py  distribution_check.py  embed.py  embed_3col_compare.py  embed_percol.py  gpu_kmeans.py  pipeline.py  qualitative_validation.py  reduce_and_cluster.py  sweep.py  umap_sweep.py  validate_signals.py  visualize.py
